--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/native-stack": "^7.3.10",
     "react": "19.0.0",
     "react-native": "0.79.1",
+    "react-native-camera": "^4.2.1",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-nfc-manager": "^3.16.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
